--- a/Front-End-User/src/app/book-details/book-details.component.html
+++ b/Front-End-User/src/app/book-details/book-details.component.html
@@ -1,49 +1,52 @@
-<div class="row">
-    <div class="col-md-9 col-md-push-3">
-        <div class="booksmedia-detail-box">
-            <div class="single-book-box">                                                
-                <div class="post-thumbnail">
-                    <div class="book-list-icon yellow-icon"></div>
-                    <img alt="Book" src="images/books-media/list-view/book-media-01.jpg" />                                                    
-                </div>
-                <div class="post-detail">
-                    <header class="entry-header">
-                        <h2 class="entry-title">The Great Gatsby</h2>
-                        <ul>
-                            <li><strong>Author:</strong> F. Scott Fitzgerald</li>
-                            <li><strong>ISBN:</strong> 9781581573268</li>
-                            <li><strong>Edition:</strong> First edition</li>
-                            <li><strong>Publisher:</strong> New York : Shaye Areheart Books, c2008</li>
-                        </ul>
-                    </header>
-                    <div class="entry-content post-buttons">
-                        <a href="#." class="btn btn-dark-gray">Reserve</a>
-                    </div>
-                </div>
+
+<div class="container" *ngIf="livre" style="padding-top:5%; padding-bottom:0% !important">
+    <h2 class="section-title text-center">Description of {{livre?.title}} </h2>
+        <span class="underline center"></span>
+</div>
+<div class="booksmedia-detail-box" *ngIf="livre" style="padding-top:1% !important;padding: 10%;">
+    <div class=" detailed-box">
+        <div class="col-md-4">
+            <div class="post-thumbnail">
+                <img src="../../assets/images/Coming-Soon.png" alt="Book Image">
             </div>
-            <p><strong>Summary:</strong> There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. </p>
-            <ul class="detail-page-listing">
-                <li><strong>Length:</strong> 518 pages.</li>
-                <li><strong>Language:</strong>English.</li>
-                <li><strong>Genre :</strong> Fiction , Drama</li>
-                <li><strong>Time Period:</strong> 2000s -- 21st century</li>
-            </ul>
-            
-            
+        </div>
+        <div class="col-md-8" style="padding: 3%;">
+            <div class="post-center-content" style="padding: 3%;">
+                <h2>{{livre?.title}}</h2>
+                <p><strong>Author:</strong> {{livre?.author}}</p>
+                <p><strong>Edition:</strong> {{livre?.edition}}</p>
+                <p><strong>Date Of Publisher:</strong> {{livre?.date_publication}}</p>
+                <p><strong>Publisher:</strong> New York : Shaye Areheart Books, c2008</p>
+                <p><strong>Local Availability:</strong> {{livre?.quantite}}</p>
+                <p><strong>Format:</strong> Book</p>
+                <p><strong>Language Note:</strong> English ,Frensh</p>
+                <p><strong>Gatgorie :</strong> {{livre?.category.title}}</p>
+                <a *ngIf="livre?.available == 1" href="#" class="btn btn-dark-gray ">Reserve</a>
+                <a *ngIf="livre?.available == 0" href="#" class="btn btn-dark-gray " disabled>Not available</a>
+                
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+    <div class="clearfix"></div>
+    <p><strong>Summary:</strong> {{livre?.description}}</p>
+    <div class="container" style="padding-bottom: 4%;" *ngIf="livres?.content[0].id_book != livre.id_book ">
+        <h4 class="section-title text-center">The Same Category </h4>
+            <span class="underline center"></span>
+    </div>
+    <div class="row" *ngIf="livres">
+        <div *ngFor="let l of livres?.content">
+            <div class="col-md-4 border-shadow" *ngIf="l.id_book != livre.id_book">
+                <div class="card text-center" >
+                    <img src="../../assets/images/Coming-Soon.png" class="card-img-top" alt="book_img">
+                    <div class="card-body" style="padding-bottom: 3%;">
+                      <h5 class="card-title">{{l?.title}}</h5>
+                      <p class="card-text">Author:  {{l?.author}}.</p>
+                      <a [routerLink]="['/bookdetails', l.id_book]" class="btn btn-primary">Book Details</a>
+                    </div>
+                  </div>
+            </div>
         </div>
     </div>
-    <div class="col-md-3 col-md-pull-9">
-        <aside id="secondary" class="sidebar widget-area" data-accordion-group>
-            <div class="widget widget_recent_releases">
-                <h4 class="widget-title">Categories</h4>
-                <ul>
-                    <li><a href="#">Drama</a></li>
-                    <li><a href="#">Romance</a></li>
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">HSorror</a></li>
-                </ul>
-                <div class="clearfix"></div>
-            </div>
-        </aside>
-    </div>
+    
 </div>
