--- a/Front-End-User/src/app/book-list/book-list.component.html
+++ b/Front-End-User/src/app/book-list/book-list.component.html
@@ -19,10 +19,10 @@
         </div>
         <div class="books-list" *ngIf="livres">
             <article *ngFor="let l of livres.content" >
-                <div class="single-book-box" *ngIf="l.available == 1">
+                <div class="single-book-box" >
                     <div class="post-thumbnail col-md-5" >
                         <!-- <div class="book-list-icon yellow-icon"></div> -->
-                        <a href="#">
+                        <a [routerLink]="['/bookdetails', l.id_book]">
                             <img alt="Book" src="../../assets/images/Coming-Soon.png" />
                         </a>
                     </div>
@@ -31,7 +31,7 @@
                             <div class="row">
                                 <div class="col-sm-6">
                                     <h3 class="entry-title">
-                                        <a href="#">{{l.title}}</a>
+                                        <a [routerLink]="['/bookdetails', l.id_book]">{{l.title}}</a>
                                     </h3>
                                     <ul>
                                         <li><strong>Author:</strong> {{l.author}}</li>
@@ -49,8 +49,11 @@
                         <div class="entry-content">
                             <p>{{l.description}}</p>
                         </div>
-                        <footer class="entry-footer">
-                            <a class="btn btn-dark-gray" href="books-media-detail-v1.html">Reserve</a>
+                        <footer class="entry-footer" *ngIf="l.available == 1">
+                            <a class="btn btn-dark-gray" href="#">Reserve</a>
+                        </footer>
+                        <footer class="entry-footer" *ngIf="l.available == 0">
+                            <a class="btn btn-dark-gray" disabled>Not available</a>
                         </footer>
                     </div>
                     <div class="clear"></div>
